# CI_22

./: README.md  pyproject.toml
Exercises/: file1.py  main.py
Lab1/: Lab1_set-covering.ipynb  README.md
Labs/: Lab1_set-covering.ipynb
lab1/: Lab1_set-covering.ipynb
lab2/: README.md  set-covering_GA.ipynb
lab3/: README.md  evolvable_agent.py  nim.py
